JPS plugin: update rwmutex-idea, add locking-util dependency
Without this commit JPS no longer has necessary dependencies
after migration to intellij SDK 261 (see KT-82657).